Remove GeckoLib — switch to native static block model renderer
- Eliminada la dependencia de GeckoLib del build.gradle junto con sus
  repositorios Maven (GeckoLib, Modrinth, CurseMaven)
- ArcaneForgeBlockEntity: reemplazado ResourceLocation por Identifier
  (net.minecraft.resources.Identifier) conforme a NeoForge 26.1.x beta
- ArcaneForgeRenderer: implementado con la nueva API de dos type-args
  BlockEntityRenderer<T, BlockEntityRenderState> incluyendo
  createRenderState() y extractRenderState()
- Añadido blockstates/arcane_forge.json y models/block/arcane_forge.json
  para renderizado estático nativo sin GeckoLib

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>